<resources>
    <string name="app_name">MobileFridge</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Nazwa użytkownika</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">zaloguj się</string>
    <string name="error_invalid_credentials">Nazwa użytkownika i hasło są nieprawidłowe</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="error_connection_failed">Nie moge połączyć się z serwerem, sprawdź swoje połączenie z internetem.
    </string>
    <string name="error_unexpected_error">Wystąpił nieoczekiwany błąd</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_recipe">CreateRecipe</string>
    <string name="title_of_recipe">Tytuł przepisu</string>
    <string name="description_of_recipe">Opis przepisu</string>
    <string name="components_of_recipe">Składniki do przepisu</string>
    <string name="product_image">product image</string>
    <string name="make_picture">Zrób zdjęcie</string>
    <string name="mark">Oceń</string>
    <string name="nickname">Witaj !</string>
    <string name="name">Imię</string>
    <string name="lastName">Nazwisko</string>
    <string name="age">Wiek</string>
    <string name="save">Zapisz</string>
</resources>
