<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/profileImage"
            android:src="@drawable/default_picture"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/circleCrop"
            android:src="@drawable/circle"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>

    <TextView
            android:id="@+id/nick"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_alignBottom="@+id/profileImage" android:layout_alignParentEnd="true"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nickname"
            android:id="@+id/textView4"
            android:layout_above="@+id/nick"
            android:layout_alignParentEnd="true" android:layout_toEndOf="@+id/profileImage"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/nameField" android:layout_centerHorizontal="true"
            android:layout_below="@+id/profileImage"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/lastName"
            android:ems="10"
            android:id="@+id/lastNameField" android:layout_below="@+id/nameField"
            android:layout_alignStart="@+id/nameField" android:layout_marginTop="35dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ageEditText"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/lastNameField" android:layout_alignStart="@+id/lastNameField"
            android:text="@string/age"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/buttonSave" android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>


</RelativeLayout>