<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/create_recipe_id">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_of_recipe" android:id="@+id/textView" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:layout_marginTop="51dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/components_of_recipe"
            android:layout_marginTop="37dp" android:id="@+id/textView3" android:layout_below="@+id/titleOfRecipe"
            android:layout_alignParentStart="true"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_of_recipe"
            android:id="@+id/textView2" android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" android:layout_marginBottom="220dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleOfRecipe" android:layout_below="@+id/textView" android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/componentsOfRecipe" android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/textView2" android:layout_alignParentEnd="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/descriptionOfRecipe" android:layout_below="@+id/componentsOfRecipe"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp"
            android:layout_alignParentEnd="true" android:layout_above="@+id/button"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dodaj przepis"
            android:onClick="addRecipe"
            android:id="@+id/button" android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/recipe_add_progress"/>

    <ProgressBar
            android:id="@+id/recipe_add_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_picture"
            android:onClick="makePhotoForRecipe"
            android:id="@+id/takePictureButton" android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>
    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageRecipe" android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>

</RelativeLayout>